err.txt
warning: function `read_dicom_series` is never used
    --> crates\ritk-io\src\format\dicom\reader.rs:1347:8
     |
1347 | pub fn read_dicom_series<B: Backend, P: AsRef<Path>>(
     |        ^^^^^^^^^^^^^^^^^
     |
     = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: function `load_dicom_series` is never used
    --> crates\ritk-io\src\format\dicom\reader.rs:1356:8
     |
1356 | pub fn load_dicom_series<B: Backend, P: AsRef<Path>>(
     |        ^^^^^^^^^^^^^^^^^

warning: struct `DicomReader` is never constructed
    --> crates\ritk-io\src\format\dicom\reader.rs:1632:12
     |
1632 | pub struct DicomReader<B> {
     |            ^^^^^^^^^^^

warning: associated function `new` is never used
    --> crates\ritk-io\src\format\dicom\reader.rs:1638:12
     |
1636 | impl<B> DicomReader<B> {
     | ---------------------- associated function in this implementation
1637 |     /// Create a new reader.
1638 |     pub fn new() -> Self {
     |            ^^^

warning: function `is_image_sop_class` is never used
   --> crates\ritk-io\src\format\dicom\sop_class.rs:252:8
    |
252 | pub fn is_image_sop_class(uid: &str) -> bool {
    |        ^^^^^^^^^^^^^^^^^^

warning: `ritk-io` (lib) generated 5 warnings
    Checking ritk-snap v0.1.0 (D:\ritk\crates\ritk-snap)
error[E0599]: no method named `id_salt` found for struct `egui::ScrollArea` in the current scope
  --> crates\ritk-snap\src\ui\preset_panel.rs:65:10
   |
64 | /     egui::ScrollArea::horizontal()
65 | |         .id_salt("preset_scroll")
   | |         -^^^^^^^ method not found in `egui::ScrollArea`
   | |_________|
   |

For more information about this error, try `rustc --explain E0599`.
error: could not compile `ritk-snap` (lib) due to 1 previous error
